<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"

    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/_400sdp"
        android:background="@drawable/rounded_large_stroke"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/addItem_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@drawable/edit_icon"
                        android:tint="@color/colorAccent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_regular"
                        android:text="@string/issue_hint"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                </LinearLayout>

                <gr.escsoft.michaelprimez.searchablespinner.SearchableSpinner
                    android:id="@+id/families_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    app:DoneSearchTintColor="@android:color/holo_purple"
                    app:RevealEmptyText="@string/select_family"
                    app:RevealViewBackgroundColor="@android:color/holo_blue_dark"
                    app:SearchViewBackgroundColor="@android:color/secondary_text_dark"
                    app:SpinnerExpandHeight="300dp"
                    app:StartSearchTintColor="@android:color/white" />


                <gr.escsoft.michaelprimez.searchablespinner.SearchableSpinner
                    android:id="@+id/items_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:visibility="gone"
                    app:DoneSearchTintColor="@android:color/holo_purple"
                    app:RevealEmptyText="@string/select_item"
                    app:RevealViewBackgroundColor="@android:color/holo_blue_dark"
                    app:SearchViewBackgroundColor="@android:color/secondary_text_dark"
                    app:SpinnerExpandHeight="300dp"
                    app:StartSearchTintColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:id="@+id/quantity_layout">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_7sdp"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_weight="2"
                        android:fontFamily="@font/cairo_regular"
                        android:text="@string/quantity"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editedItem_editText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_7sdp"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/cairo_regular"
                        android:gravity="center"
                        android:inputType="number"
                        android:selectAllOnFocus="true"
                        android:text="0"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addItemReason_textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_white"
                    android:padding="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/reason_ET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/issue_content"
                        android:lines="4"
                        android:padding="@dimen/_10sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_confirm_issue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/edittext_shadow"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:theme="@style/ActionButton.NextStepMode" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/addItems_progressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>