<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GardMonafesActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_stroke">
            <LinearLayout
                android:id="@+id/waritex_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/_5sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/waritex_products"
                    android:fontFamily="@font/cairo_bold"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_margin="@dimen/_5sdp"
                android:layout_below="@id/waritex_header"
                android:layout_width="match_parent"
                tools:itemCount="3"
                tools:listitem="@layout/gard_monafes_item"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_stroke">
            <LinearLayout
                android:id="@+id/monafes_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/_5sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/competitor_products"
                    android:fontFamily="@font/cairo_bold"/>

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_margin="@dimen/_5sdp"
                android:layout_below="@id/monafes_header"
                android:layout_width="match_parent"
                tools:itemCount="3"
                tools:listitem="@layout/gard_monafes_item"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/ActionButton.NextStepMode"
        android:padding="@dimen/_5sdp"
        android:text="@string/take_photo"
        />
</LinearLayout>
</ScrollView>