<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".ReasonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_primary"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    layout="@layout/product_item_editable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@drawable/ic_error_black_24dp"
                        android:tint="@color/colorAccent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/cairo_regular"
                        android:text="@string/edit_reason_hint"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_7sdp"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:fontFamily="@font/cairo_regular"
                        android:text="@string/edit_reason_title"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                    <Spinner
                        android:layout_marginTop="@dimen/_7sdp"
                        android:id="@+id/sp_issues"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:entries="@array/error_reasons_titles" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/issue_content_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_white"
                    android:padding="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/et_new_issue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_reason_title"
                        android:lines="4"
                        android:padding="@dimen/_10sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_confirm_issue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    style="@style/ActionButton.NextStepMode"
                    android:text="@string/report_edit"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>